Browsers support (Chrome, IE, Safari, No FireFox, Opera, iPhone)

--- a/about.html
+++ b/about.html
@@ -39,15 +39,16 @@ please enable JavaScript.</li>
 
 <h2>Browser Support:</h2>
 <table border=1 style="border-collapse:collapse">
-<tr><td></td><td>WindowsXP</td><td>MacOSXLion</td><td>iPhone</td></tr>
-<tr><td>Internet Explorer</td><td>?</td><td>-</td><td>-</td></tr>
-<tr><td>Safari           </td><td>?</td><td>?</td><td>?</td></tr>
-<tr><td>FireFox          </td><td>?</td><td>?</td><td>-</td></tr>
+<tr><td></td><td>Windows 7</td><td>MacOSXLion</td><td>iPhone</td></tr>
+<tr><td>Internet Explorer</td><td>OK (10.0)</td><td>-</td><td>-</td></tr>
+<tr><td>Safari           </td><td>OK (5.1.7)(*1)</td><td>?</td><td>OK (Ver7) (*2)</td></tr>
+<tr><td>FireFox          </td><td>NG (25.0.1)</td><td>?</td><td>-</td></tr>
 <tr><td>Chrome           </td><td>OK (31.0)</td><td>?</td><td>-</td></tr>
-<tr><td>Opera            </td><td>?</td><td>?</td><td>?</td></tr>
+<tr><td>Opera            </td><td>OK (17.0)</td><td>?</td><td>?</td></tr>
 </table>
 </td></tr></table>
-
+*1 Slightly slow.<br>
+*2 dragging motion is disabled.<br>
 <address>
 version <span id="versiondisplay"></span><br>
 <script type="text/javascript" src="./4dsoko_version.js"></script>
