--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 <div style="vertical-align:top"><img src="logo.png">&nbsp;4 dimensional Billiyards game.</div>
 <div id="debugout"> </div>
 <br>
-<table style="width:100%"><td style="text-align:right;vertical-align:center">
+<table style="width:100%" align="center"><tr><td style="text-align:center;vertical-align:center">
 <!-- left UI -->
-</td><td style="text-align:left">
+</td><td style="text-align:center">
 <canvas align="left" id="canvas0" width="512" height="512" style="background-color:black;border-width:1px;border-style:solid;border-color:#88FF88"></canvas><br>
 <form id="modeform">
 <input type=button name="startbutton" id="startbutton" value="RESET" onclick="javascript:restartGame();">
