fix spelling mistake

--- a/about.html
+++ b/about.html
@@ -21,12 +21,12 @@
   hr{border-style:solid}
   canvas{padding:0px;margin:0px}
 --></style>
-<title>about 4D Billiyards</title>
+<title>about 4D Billiards</title>
 </head>
 <body>
-<h1>about 4D Billiyards</h1>
+<h1>about 4D Billiards</h1>
 <ul>
-<li>4D Billiyards is a 4-dimensional Billiyards game.<br>
+<li>4D Billiards is a 4-dimensional Billiards game.<br>
 <li>this game is implemented with JavaScript and HTML5 Canvas.<br>
 please enable JavaScript.</li>
 <li>With IE, excanvas.js is working. please enable ActiveX controls.</li>
