--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
   hr{border-style:solid}
   canvas{padding:0px;margin:0px}
 --></style>
-<title>4D Billiyards</title>
+<title>4D Billiards</title>
 </head>
 <body>
-<div style="vertical-align:top"><img src="logo.png">&nbsp;4 dimensional Billiyards game.</div>
+<div style="vertical-align:top"><img src="logo.png">&nbsp;4 dimensional Billiards game.</div>
 <div id="debugout"> </div>
 <br>
 <table style="width:100%" align="center"><tr><td style="text-align:center;vertical-align:center">
@@ -49,7 +49,7 @@
 </div>
 <hr>
   <address>
-  4D Billiyards
+  4D Billiards
   version <span id="versiondisplay"></span><br>
   <script type="text/javascript" src="./4dsoko_version.js"></script>
   programed by <a href="http://twitter.com/#!/koteitan">koteitan</a><br>
